log
Fri 10 May 2024 01:05:00 AM UTC: 
 tests:  1|8
total_score: 0/70
b1d878e
Fri 10 May 2024 01:07:50 AM UTC: 
 treemap.c | 40 ++++++++++++++++++++++++++--------------
 1 file changed, 26 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:77:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   77 |     return NULL;
      |            ^~~~
treemap.c:76:6: note: declared here
   76 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c: In function ‘eraseTreeMap’:
treemap.c:81:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   81 |     return NULL;
      |            ^~~~
treemap.c:80:6: note: declared here
   80 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8722620
Fri 10 May 2024 01:08:12 AM UTC: 
 treemap.c | 37 +++++++++++--------------------------
 1 file changed, 11 insertions(+), 26 deletions(-)
 tests:  1|8
total_score: 0/70
79ddb40
Fri 10 May 2024 01:10:27 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d29f839
Fri 10 May 2024 01:39:42 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9c1ae39
Fri 10 May 2024 01:39:52 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|7
total_score: 5/70
9478d8d
Fri 10 May 2024 01:41:44 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
a7581e0
Fri 10 May 2024 01:43:13 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:16: error: variable ‘aux2’ set but not used [-Werror=unused-but-set-variable]
   55 |     TreeNode * aux2 = NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
ab331e3
Fri 10 May 2024 02:12:47 AM UTC: 
 treemap.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  4|7
total_score: 5/70
ecf4ec9
Fri 10 May 2024 02:19:13 AM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++--
 1 file changed, 27 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:19: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   58 |         TreeNode *parent = NULL;
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
156c8c7
Fri 10 May 2024 02:20:06 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: ‘parent’ undeclared (first use in this function)
   61 |             parent = current;
      |             ^~~~~~
treemap.c:61:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ff04d15
Fri 10 May 2024 02:20:46 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: ‘parent’ undeclared (first use in this function)
   61 |             parent = current;
      |             ^~~~~~
treemap.c:61:13: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:63:24: error: ‘TreeNode’ has no member named ‘value’
   63 |                 current->value = value;
      |                        ^~
Compilation failed
cff49a2
Fri 10 May 2024 02:21:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: ‘parent’ undeclared (first use in this function)
   61 |             parent = current;
      |             ^~~~~~
treemap.c:61:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
41b696d
